# timable

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
src/: App.tsx  index.css
src/components/Content/: index.styles.css  index.tsx
src/components/DonutChart/: index.tsx
src/components/Footer/: index.styles.css  index.tsx
src/components/Header/: index.styles.css  index.tsx
src/components/SideBarButton/: index.styles.css  index.tsx
src/components/Sidebar/: index.styles.css  indext.tsx
src/pages/AboutUs/: index.tsx
src/pages/Home/: index.tsx
timable-backend/: .gitignore  Dockerfile  README.md  play_with_points.py  pyproject.toml
timable-backend/timable_backend/: app.py  exceptions.py  models.py
timable-backend/timable_backend/api/: image.py  pin.py  session.py  statistics.py  users.py  votes.py
timable-backend/timable_backend/db/: data.json  db_models.py  models.db  models.py  session.py
timable-backend/timable_backend/services/: image.py  jwt_session.py  pin.py  statistics.py  users.py  vote.py
timable-frontend/: package-lock.json  package.json
timable-frontend/public/: index.html
timable-frontend/src/: App.tsx  index.css  index.tsx
timable-frontend/src/components/CityMap/: index.styles.css  index.tsx
timable-frontend/src/components/ColumnChart/: index.styles.css  index.tsx
timable-frontend/src/components/Content/: index.styles.css  (+1 more)
timable-frontend/src/models/: pin-model.ts  place-model.ts  user-model.ts  view-port-model.ts  vote-model.ts
timable-frontend/src/utils/: constants.ts  pinData.ts  zoneMapData.jsx
(+32 files in other folders)
