[tool.poetry]
name = "timable-backend"
version = "0.1.0"
description = "API for TimAble app"
authors = ["Alex Serban <alexandru.b.serban@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
bcrypt = "^4.0.1"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
requests = "^2.31.0"
loguru = "^0.7.2"
python-jose = "^3.3.0"
black = "^23.11.0"
sqlalchemy-utils = "^0.41.1"
passlib = "^1.7.4"
shapely = "^2.0.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
